@@ -4,6 +4,7 @@ import io.github.trimax.venta.engine.model.common.dto.Frame;
 import lombok.experimental.UtilityClass;
 import org.joml.Vector4f;
 
+import java.util.Collections;
 import java.util.List;
 
 @UtilityClass
@@ -62,7 +63,5 @@ public final class DefinitionsBuffer {
     public static final Vector4f COLOR_WHITE = new Vector4f(1.f, 1.f, 1.f, 1.f);
 
     /** Frames **/
-    public static final List<Frame> DEFAULT_FRAMES = List.of(
-            new Frame(0, 0, 1, 1)
-    );
+    public static final List<Frame> DEFAULT_FRAMES = Collections.emptyList();
 }
